testsuite/tests/typecheck/should_fail/T3176.stderr

T3176.hs:9:27: error:
    • Cannot use record selector ‘unES’ as a function due to escaped type variables
      Probable fix: use pattern-matching syntax instead
    • In the first argument of ‘($)’, namely ‘unES’
      In the second argument of ‘($)’, namely ‘unES $ f t’
      In the expression: show $ unES $ f t
